--- a/html/base.j2
+++ b/html/base.j2
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Homework App | {% block title %}{% endblock %}</title>
+    <title>Wattpad Downloader | {% block title %}{% endblock %}</title>
     {% block head %}<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>{% endblock %}
 </head>
 <body>
