--- a/html/story.j2
+++ b/html/story.j2
@@ -2,5 +2,6 @@
 
 {% block content %}
     <h1>{{ story.title }}</h1>
-    <p>{{ story.description }}</p>
+    <p>{{ story.content }}</p>
+    {{ author }}
 {% endblock %}
