--- a/html/story.j2
+++ b/html/story.j2
@@ -3,5 +3,5 @@
 {% block content %}
     <h1>{{ story.title }}</h1>
     <p>{{ story.content }}</p>
-    {{ author }}
+    {% include "widgets/author.j2" %}
 {% endblock %}
