--- a/html/widgets/author.j2
+++ b/html/widgets/author.j2
@@ -1,6 +1,8 @@
-<a class="author" href="https://www.wattpad.com/user/{{ story.author.username }}">
-    <div>
-        <img src="{{ story.author.avatar }}" alt="Author avatar">
-        <p>{{ story.author.name }}</p>
-    </div>
-</a>
+<div class="author">
+    <a href="https://www.wattpad.com/user/{{ story.author.username }}">
+        <div>
+            <img src="{{ story.author.avatar }}" alt="Author avatar">
+            <p>{{ story.author.name }}</p>
+        </div>
+    </a>
+</div>
