--- a/html/base.j2
+++ b/html/base.j2
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Wattpad Downloader | {% block title %}{% endblock %}</title>
     {% block head %}<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>{% endblock %}
+    {% block css %}<link rel="stylesheet" href="/static/style.css">{% endblock %}
 </head>
 <body>
     {% block content %}{% endblock %}
