--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  @apply font-sans text-base bg-slate-800 text-white;
+}
 
 .author {
-  @apply text-4xl font-bold text-gray-800 flex border-amber-300;
+  @apply text-4xl font-bold text-white flex;
+}
+
+.author div {
+  @apply border-2
+    border-amber-300 rounded-3xl p-4;
 }
 
 .author img {
@@ -12,9 +20,16 @@
 }
 
 .author p {
-  @apply text-gray-600 mt-2 inline-flex;
+  @apply text-amber-200 mt-2 inline-flex text-3xl;
 }
 
 .author :hover {
-  @apply text-blue-500 cursor-pointer;
+  @apply
+    text-blue-500
+    cursor-pointer
+    border-blue-500
+    transition
+    transition-all
+    duration-300
+  ;
 }
