--- a/html/story.j2
+++ b/html/story.j2
@@ -1,7 +1,9 @@
 {% extends "base.j2" %}
 
 {% block content %}
-    <h1>{{ story.title }}</h1>
-    <p>{{ story.content }}</p>
-    {% include "widgets/author.j2" %}
+    <div class="story">
+        <h1>{{ story.title }}</h1>
+        <p>{{ story.content }}</p>
+        {% include "widgets/author.j2" %}
+    </div>
 {% endblock %}
