--- a/html/story.j2
+++ b/html/story.j2
@@ -1,9 +1,23 @@
 {% extends "base.j2" %}
 
+{% block title %}{{ story.title }}{% endblock %}
+
 {% block content %}
     <div class="story">
-        <h1>{{ story.title }}</h1>
-        <p>{{ story.content }}</p>
-        {% include "widgets/author.j2" %}
+        <a href="{{ story.url }}"><h1>{{ story.title }}</h1></a>
+        {# Render the story image #}
+        {% if story.cover %}
+            <img src="{{ story.cover }}" alt="{{ story.title }}">
+        {% endif %}
+        {# Render the story description #}
+        {# split story.description at each newline character #}
+        {% for paragraph in story.description.split('\n') %}
+            {% if paragraph.strip() != "" %}
+                <p>{{ paragraph }}</p>
+            {% endif %}
+        {% endfor %}
     </div>
+    {# Render the story author #}
+    {% include "widgets/author.j2" %}
+
 {% endblock %}
