--- a/html/widgets/author.j2
+++ b/html/widgets/author.j2
@@ -1,8 +1,6 @@
 <div class="author">
     <a href="https://www.wattpad.com/user/{{ story.author.username }}">
-        <div>
             <img src="{{ story.author.avatar }}" alt="Author avatar">
-            <p>{{ story.author.name }}</p>
-        </div>
+            <h2>{{ story.author.name }}</h2>
     </a>
 </div>
