--- a/html/story.j2
+++ b/html/story.j2
@@ -7,7 +7,7 @@
         <div class="cover">
             {% if story.cover %}
             {# Render the story image #}
-            <img src="{{ story.cover }}" alt="{{ story.title }}">
+            <img id="cover" src="{{ story.cover }}" alt="{{ story.title }}">
             {% endif %}
             <div>
             <a href="{{ story.url }}"><h1>{{ story.title }}</h1></a>
