--- a/html/widgets/author.j2
+++ b/html/widgets/author.j2
@@ -1,5 +1,5 @@
-<div class="author">
-    <a href="https://www.wattpad.com/user/{{ story.author.username }}">
+<div>
+    <a class="author" href="https://www.wattpad.com/user/{{ story.author.username }}">
         <img src="{{ story.author.avatar }}" alt="Author avatar">
         <h2>{{ story.author.name }}</h2>
     </a>
