--- a/html/story.j2
+++ b/html/story.j2
@@ -10,7 +10,7 @@
             <img id="cover" src="{{ story.cover }}" alt="{{ story.title }}">
             {% endif %}
             <div>
-            <a href="{{ story.url }}"><h1>{{ story.title }}</h1></a>
+            <h1>{{ story.title }}</h1>
             {# Render the story author #}
             {% include "widgets/author.j2" %}
             </div>
