--- a/html/story.j2
+++ b/html/story.j2
@@ -7,7 +7,9 @@
         <div class="cover">
             {% if story.cover %}
             {# Render the story image #}
-            <img id="cover" src="{{ story.cover }}" alt="{{ story.title }}">
+            <a id="cover" href="{{ story.url }}">
+                <img id="cover-image" src="{{ story.cover }}" alt="{{ story.title }}">
+            </a>
             {% endif %}
             <div>
             <h1>{{ story.title }}</h1>
