--- a/css/style.css
+++ b/css/style.css
@@ -27,15 +27,19 @@
     @apply flex flex-row;
 }
 #cover {
-  @apply h-fit w-fit rounded-3xl align-middle float-left;
+  @apply h-fit;
 }
 
-#cover-image {
-  @apply rounded-3xl p-4;
-}
+/*#cover-image {*/
+/*  @apply rounded-3xl;*/
+/*}*/
 
 .cover h1 {
   @apply text-5xl font-bold text-amber-200 m-4;
+}
+
+.cover a #cover-image {
+  @apply h-full w-full mb-4 rounded-xl shadow-lg;
 }
 
 /*
@@ -49,7 +53,7 @@
 }
 
 .author img {
-  @apply h-1/3 w-1/3 rounded-lg;
+  @apply h-1/4 w-1/4 rounded-lg;
 }
 
 .author h2 {
