--- a/css/style.css
+++ b/css/style.css
@@ -3,60 +3,51 @@
 @tailwind utilities;
 
 * {
-  @apply font-sans text-base text-white bg-[#141414];
+    @apply font-sans text-base text-white bg-[#141414];
 }
 
 .story {
-  @apply m-4;
+    @apply m-4;
 }
 
 .chip {
-  @apply italic font-semibold bg-amber-200 text-black rounded-3xl p-2 m-2;
+    @apply italic font-semibold bg-amber-200 text-black rounded-3xl p-2 m-2;
 }
 
 .chips {
-  @apply flex flex-wrap justify-center;
+    @apply flex flex-wrap justify-center;
 }
 
 .description {
-  @apply text-2xl text-white flex flex-col items-center m-4;
+    @apply text-2xl text-white flex flex-col items-center m-4;
 }
 
 .cover {
-  /* Single line */
-    @apply flex flex-row;
+    /* Single line */
+    @apply flex flex-row items-center justify-center;
 }
-#cover {
-  @apply h-fit;
-}
-
-/*#cover-image {*/
-/*  @apply rounded-3xl;*/
-/*}*/
 
 .cover h1 {
-  @apply text-5xl font-bold text-amber-200 m-4;
+    @apply text-5xl font-bold text-amber-200 m-4;
+}
+
+.cover a {
+    @apply h-fit bg-transparent;
 }
 
 .cover a #cover-image {
-  @apply h-full w-full mb-4 rounded-xl shadow-lg;
+    @apply h-full w-full mb-4 rounded-xl shadow-lg;
 }
 
-/*
-|       |
-| image | Author Name
-|       |
-*/
-
 .author {
-  @apply flex flex-row items-center m-4 border-2 border-amber-200 rounded-lg;
+    @apply m-4 border-2 border-amber-200 mt-2 mb-2 rounded-full;
 }
 
 .author img {
-  @apply h-1/4 w-1/4 rounded-lg;
+    @apply h-20 w-20 rounded-full inline-block;
 }
 
-.author h2 {
-  @apply text-4xl text-amber-200 m-4;
+/* The image and the text should be on the same line */
+.author p {
+    @apply text-2xl text-white inline-block m-4 align-middle;
 }
-
