--- a/html/story.j2
+++ b/html/story.j2
@@ -14,10 +14,12 @@
             <div>
             <h1>{{ story.title }}</h1>
             {# Render the story author #}
-            <a class="author" href="https://www.wattpad.com/user/{{ story.author.username }}">
-                <img src="{{ story.author.avatar }}" alt="Author avatar">
-                <h2>{{ story.author.name }}</h2>
-            </a>
+            <div class="author">
+                <a href="https://www.wattpad.com/user/{{ story.author.username }}">
+                    <img src="{{ story.author.avatar }}" alt="Author avatar">
+                    <p>{{ story.author.name }}</p>
+                </a>
+            </div>
             </div>
         </div>
 {#        <hr>#}
