--- a/html/story.j2
+++ b/html/story.j2
@@ -56,3 +56,11 @@
         });
     </script>
 {% endblock %}
+
+{% block meta %}
+    <meta property="og:type" content="website">
+{#    <meta property="og:url" content="https://linkfork.co">#}
+    <meta property="og:title" content="{{ story.title }}">
+{#    <meta property="og:description" content="LinkFork lets you shorten, and customize how your link will appear when shared on social media, for free.">#}
+    <meta property="og:image" content="{{ story.cover }}">
+{% endblock %}
