--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -3,6 +3,5 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-    <h1>Home</h1>
-    <p>Welcome to the home page!</p>
+<a href="/story">Story</a>
 {% endblock %}
