--- a/templates/story.html.j2
+++ b/templates/story.html.j2
@@ -1,8 +1,7 @@
 {% extends "base.html.j2" %}
 
-{% if error %}
+{% if err %}
 {# Renders story.error.html.j2 instead of this file #}
-{% block title %}Error{% endblock %}
 {% include "story.error.html.j2" %}
 
 {% else %}
